# pouch-gateway

./: .editorconfig  CONTRIBUTING.md  Kconfig  README.md  requirements.txt  west-ncs.yml  west-zephyr.yml
.github/workflows/: bsim.yml  build.yml  coverity.yml  lint.yml  release.yml
doc/: simulator_or_usb_dongle.md
gateway/: Kconfig  Kconfig.sysbuild  Kconfig.sysbuild.defconfig  README.md  prj.conf  sample.yaml  tfm_custom.conf
gateway/boards/: frdm_rw612_wifi.conf  nrf9160dk_nrf52840.conf  nrf9160dk_nrf9160_ns.overlay  thingy91x_nrf5340_cpuapp.conf  thingy91x_nrf5340_cpuapp.overlay
gateway/socs/: nrf9160_ns.conf
gateway/src/: main.c
include/pouch_gateway/: info.h  types.h  uplink.h
include/pouch_gateway/bt/: bond.h  info.h
lib/: CMakeLists.txt  cert.c  downlink.c  info.c  uplink.c
lib/bt/: bond.c  cert.c  cert.h  connect.c  device_cert.c  downlink.c  downlink.h  info.c  scan.c  server_cert.c  uplink.c  uplink.h
ncs-serial-modem/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  Kconfig.sysbuild.defconfig  prj.conf  west.yml
ncs-serial-modem/boards/: nrf9160dk_nrf9160_ns.overlay  thingy91x_nrf9151_ns.overlay
ncs-serial-modem/sysbuild/mcuboot/boards/: thingy91x_nrf9151.conf
samples/custom_connect/: Kconfig  prj.conf  sample.yaml  sysbuild.cmake
samples/custom_connect/boards/: nrf9160dk_nrf52840.overlay
samples/custom_connect/src/: main.c  scan.c
scripts/runners/: __init__.py  bsim_device.py  bsim_phy.py  bsim_zephyr.py
zephyr/: module.yml  patches.yml
zephyr/patches/ncs/zephyr/: 0001-modem-uart_isr-support-mdm-dtr-gpios.patch  0002-modem-uart-delay-50ms-after-triggering-modem.patch  0003-dts-bindings-modem-add-common-autostarts-property.patch  0004-drivers-modem_cellular-add-Ready-signal-handling.patch
zephyr/patches/zephyr/zephyr/: 0001-drivers-net-nsos-support-nrf_bsim.patch  0002-boards-nrf_bsim-define-NSOS_IRQ-for-offloaded-socket.patch  0003-nsi-move-nsos_fcntl-to-more-generic-nsi_fcntl.patch  0004-nsi-fcntl-add-O_CREAT-and-O_TRUNC.patch  0005-subsys-fs-nsim_mount-new-FS-for-mounting-host-filesy.patch  0006-tests-fs-nsim_mount-add-basic-tests-for-implemented-.patch
zephyr/snippets/thingy91x-uart0-exp-board/: snippet.yml  thingy91x-uart0-exp-board.overlay
